--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-MONGOURI = mongodb+srv://Vikranth19:CnJTl3P1zNn46RKr@cluster0.0xbqt.mongodb.net/test
-JWT_SECRET = sl_mysecret
+MONGOURI = mongodb+srv://Vikranth19:<PASSWORD>@cluster0.0xbqt.mongodb.net/test
+JWT_SECRET = SECRET_KEY
